Add basic layout in html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="./src/script.js" defer></script>
   </head>
   <body>
-    <div class="content"></div>
+    <header><h1>Wonderlust</h1></header>
+    <main>
+      <section id="iternary"></section>
+      <section class="budget"></section>
+      <section class="expanse"></section>
+      <section class="logger"></section>
+    </main>
+    <footer>Agata Deter &copy Copyrights 2024</footer>
   </body>
 </html>
