--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
           <button type="submit">Add</button>
         </form>
       </div>
-      <div class="budget"></div>
+      <div class="budget">
+        <h3>Budget</h3>
+        <form action="" id="budget-form">
+          <input
+            type="number"
+            name="budget"
+            placeholder="Enter your budget..."
+          />
+          <button type="submit">Add</button>
+        </form>
+      </div>
       <div class="expense">
         <h3>Expanses</h3>
         <form action="" id="expenses-form">
@@ -39,7 +49,7 @@
             name="expense-amount"
             placeholder="Enter your expense.."
           />
-          <button type="submit">Add to list</button>
+          <button type="submit">Add</button>
         </form>
       </div>
       <div id="dest-log">
