Add handling to append the template

--- a/index.html
+++ b/index.html
@@ -55,14 +55,13 @@
           </form>
         </div>
         <!-- destination holder template -->
-        <div id="dest-log">
-          <template>
-            <img src="" alt="" />
-            <h3 id="place-holder">Your destination</h3>
-            <h4 id="start-date-holder">Start date</h4>
-            <h4 id="end-date-holder">End date</h4>
-          </template>
-        </div>
+        <div id="dest-log"></div>
+        <template id="temp-dest">
+          <img src="" alt="" />
+          <h3 id="place-holder">Your destination</h3>
+          <h4 id="start-date-holder">Start date</h4>
+          <h4 id="end-date-holder">End date</h4>
+        </template>
         <!-- expenses logger -->
         <div id="logger">
           <h2>Expenses List</h2>
