Add expense to local storage

--- a/index.html
+++ b/index.html
@@ -45,11 +45,17 @@
         <div class="expense">
           <h3>Expanses</h3>
           <form action="" id="expenses-form">
-            <input type="text" name="expense" placeholder="Enter expense.." />
+            <input
+              type="text"
+              name="expense"
+              placeholder="Enter expense.."
+              id="expense"
+            />
             <input
               type="number"
               name="expense-amount"
               placeholder="Enter amount.."
+              id="expense-amount"
             />
             <button type="submit">Add</button>
           </form>
