Add validation for the budget

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
               step=".01"
               placeholder="Enter your budget..."
             />
+            <div class="error"></div>
             <button type="submit">Add</button>
           </form>
         </div>
