Fix issue with expense amount exceeding budget

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div id="budget-log">
           <h3 class="spending-holder">Spending</h3>
           <div id="balance-div"></div>
-          <h3 class="budget-holder">Budget</h3>
+          <h3 class="budget-holder">Budget: 0$</h3>
         </div>
       </div>
     </main>
