Change styling to budget form

--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
         <div class="budget">
           <h3>Budget</h3>
           <form action="" id="budget-form">
-            <input
-              type="number"
-              name="budget"
-              step=".01"
-              placeholder="Enter your budget..."
-            />
-            <div class="error"></div>
+            <div>
+              <input
+                type="number"
+                name="budget"
+                step=".01"
+                placeholder="Enter your budget..."
+              />
+              <div class="error"></div>
+            </div>
             <button type="submit">Add</button>
           </form>
         </div>
