Add div representing spending percent

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <!-- budget tracker holder -->
         <div id="budget-log">
           <h3 class="spending-holder">Spending</h3>
-          <div id="balance-div"></div>
+          <div id="balance-div"><div id="color-balance"></div></div>
           <h3 class="budget-holder">Budget: 0$</h3>
         </div>
       </div>
