--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
       </div>
       <dialog id="edit-dialog">
         <form id="edit-form">
+          <h3>Edit</h3>
           <div>
             <input
               type="text"
