--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./src/script.js" defer></script>
   </head>
   <body>
-    <header><h1>Wonderlust</h1></header>
+    <header><h1>Wanderlust</h1></header>
     <main>
       <div class="content">
         <!-- destination holder template -->
